<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.org.hdfs.file.listener</groupId>
    <artifactId>hdfs-listener</artifactId>
    <version>1.0.2</version>
    <name>Risk Analytics : HDFS events</name>

    <properties>
        <jdk.version>1.8</jdk.version>

        <scala.version.major>2.11</scala.version.major>
        <scala.version.minor>8</scala.version.minor>
        <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
        <encoding>UTF-8</encoding>
        <scala.plugin.version>2.15.2</scala.plugin.version>
        <eclipse.plugin.version>2.9</eclipse.plugin.version>
        <surefire.plugin.version>2.7</surefire.plugin.version>
        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
        <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
        <argLine>-Xms512m -Xmx8196m -XX:MaxPermSize=512m -Xverify:none</argLine>
        <!-- Sonar properties -->
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>


    </properties>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>2.7.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client -->
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>2.7.3</version>
        </dependency>

    </dependencies>
    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.plugin.version}</version>
                <configuration>

                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

                </plugins>
            </build>
    <profiles>

    </profiles>


</project>
